# documento

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DOCUMENTATION.md  Dockerfile  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  skills
data/raw/: noisy_ocr.txt
memory/: patterns_legal-memo.json
skills/advance-healthcare-directive/: SKILL.md
skills/affidavit-witness-declaration/: SKILL.md
skills/answer-affirmative-defenses/: SKILL.md
skills/articles-of-incorporation/: SKILL.md
skills/board-resolution/: SKILL.md
skills/cease-and-desist/: SKILL.md
skills/civil-complaint/: SKILL.md
skills/corporate-bylaws/: SKILL.md
skills/durable-power-of-attorney/: SKILL.md
skills/last-will-testament/: SKILL.md
skills/legal-memo/: SKILL.md
skills/llc-operating-agreement/: SKILL.md
skills/motion-summary-judgment/: SKILL.md
skills/motion-to-dismiss/: SKILL.md
skills/msa/: SKILL.md
skills/mutual-nda/: SKILL.md
skills/patent-claims/: SKILL.md
skills/request-for-production/: SKILL.md
skills/revocable-living-trust/: SKILL.md
skills/saas-subscription-agreement/: SKILL.md
skills/settlement-agreement/: SKILL.md
skills/sow/: SKILL.md
skills/trademark-description/: SKILL.md
skills/written-interrogatories/: SKILL.md
src/documento/: main.py
src/documento/feedback/: learner.py
src/documento/generation/: drafter.py
src/documento/retrieval/: vector_store.py
src/legal_draft_agent/: cli.py  config.py  main.py  models.py
src/legal_draft_agent/feedback/: learner.py
src/legal_draft_agent/generation/: drafter.py
src/legal_draft_agent/retrieval/: vector_store.py
src/legal_draft_generator/: config.py  main.py  models.py
src/legal_draft_skill/: cli.py  config.py  main.py  models.py
tests/: test_api.py  test_real_world_ingestion.py
ui/: .dockerignore  .env.example  Dockerfile  GEMINI.md  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
ui/.gemini/: settings.json
ui/app/: layout.tsx  page.tsx
ui/components/: app-shell.tsx  document-uploader.tsx  draft-type-combobox.tsx
ui/docs/: UI_ARCHITECTURE.md
ui/hooks/: use-api.ts
ui/lib/: api.ts  mock-api.ts  store.tsx  types.ts
(+132 files in other folders)
