[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-draft-generator"
version = "0.1.0"
description = "Legal document processor with grounded retrieval and learning from edits."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "openai",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "pillow",
    "pytesseract",
    "pypdf",
    "chromadb",
    "sqlite-vec",
    "tiktoken",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "docling",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: fast, isolated tests",
    "integration: tests requiring external services",
    "smoke: critical path verification",
]
